# aria2_dart

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: aria2_dart.podspec
ios/Classes/: aria2_dart.c
lib/: aria2.dart  aria2_dart.dart  aria2_dart_bindings_generated.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/api/: aria.dart  aria.freezed.dart
lib/model/: aria_detail.dart  aria_detail.freezed.dart  aria_detail.g.dart
linux/: CMakeLists.txt
macos/: aria2_dart.podspec
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: aria.rs  mod.rs
src/: CMakeLists.txt  aria2_dart.c
(+1 files in other folders)
