[package]
name = "aria2_dart"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.32"
aria2-ws = "0.4.0"
futures = "0.3.30"
lazy_static = "1.4.0"
serde_json = "1.0.114"
tokio = "1.36.0"
serde = { version = "1.0", features = ["derive"] }
